# promptmetrics

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLI.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROMPT_FORMAT.md  README.md  SDK.md  SECURITY.md  TEST_CASES.md  docker-compose.postgres.yml  docker-compose.yml  eslint.config.js  jest.config.js  package-lock.json  package.json  seed-smoke-api-key.js  tsconfig.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
clients/python/: pyproject.toml  setup.py
clients/python/promptmetrics/: __init__.py  client.py
clients/python/tests/: test_client.py
docs/: BLOCKER_FIXES_PLAN.md  CODE_REVIEW.md  NPM_RELEASES.md  TEST_RESULTS.md  api.md  architecture.md  cli.md  configuration.md  openapi.yaml  prompt-format.md  sdk.md
examples/: welcome.json
migrations/: 001_initial_schema.sql  001_initial_schema.ts  002_add_ollama_columns.sql  002_add_ollama_columns.ts  003_add_key_expiration.sql  003_add_key_expiration.ts  004_add_evaluations.sql  004_add_evaluations.ts  005_add_workspace_id.sql  005_add_workspace_id.ts  006_add_trace_created_index.sql  006_add_trace_created_index.ts  007_alter_rate_limits_window_start.ts  008_add_prompt_status.ts  009_alter_spans_time_columns.ts  010_add_metrics_indexes.ts  011_add_ab_testing.ts  012_add_datasets_and_eval_runs.ts  013_add_compliance.ts  014_add_log_run_id.ts  015_add_ab_test_promotion.ts  016_cascade_deletes.ts  017_cascade_eval_runs_and_ab_test_dataset.ts  018_add_log_status.ts  019_add_audit_target_id.ts  020_add_ab_test_evaluation.ts  (+6 more)
(+358 files in other folders)
