[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptmetrics"
version = "1.0.0"
description = "Python SDK for PromptMetrics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.30", "respx>=0.21"]

[tool.pytest.ini_options]
testpaths = ["tests"]
